fix: alignment

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -14,12 +14,13 @@
   padding: 0;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
 .footer-links a {
   color: var(--neutral-100);
+  margin: 0 0.25rem;
 }
 
 .footer-links a:hover {
